ModalDialogDel - done (visit.js + 2 function), notes in css, html corrected

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
 
     </head>
     <body>
+    <div class="modal" tabindex="-1" id="modalDialogDelete">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Are you kidding?</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body modal-dialog-delete-text">
+                </div>
+                <div class="modal-footer modal-dialog-delete-footer">
+                </div>
+            </div>
+        </div>
+    </div>
         <video autoplay muted loop id="myVideo">
             <source
                 src="./video/The Breathtaking Beauty of Nature _ HD.mp4"
@@ -274,6 +288,7 @@
         </div>
     </div>
     <div class="container-md modal_form_wrapper"></div>
+    <div class="container-md modal_dialog_delete"></div>
     <div class="container-sm center">
         <div class="row row-cols-1 row-cols-md-3 g-4 card-container">
             <div class="container">
@@ -282,77 +297,7 @@
                 </span><span>o</span>&nbsp;<span>s</span><span>h</span><span>o
                 </span><span>w
                 </span><span>!</span>
-<!--            <div class="col">-->
-<!--                <div class="card">-->
-<!--                    <div class="card-body">-->
-<!--                        <h5 class="card-title">Card title</h5>-->
-<!--                        <p class="card-text">-->
-<!--                            This is a longer card with supporting text-->
-<!--                        </p>-->
-<!--<li></li>-->
-<!--                        <button-->
-<!--                                type="button"-->
-<!--                                class="btn btn-outline-light"-->
-<!--                        >-->
-<!--                            Info-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <div class="card">-->
-<!--                    <div class="card-body">-->
-<!--                        <h5 class="card-title">Card title</h5>-->
-<!--                        <p class="card-text">-->
-<!--                            This is a longer card with supporting text-->
-<!--                            below as a natural lead-in to additional-->
-<!--                            content. This content is a little bit-->
-<!--                            longer.-->
-<!--                        </p>-->
-<!--                        <button-->
-<!--                                type="button"-->
-<!--                                class="btn btn-outline-light"-->
-<!--                        >-->
-<!--                            Info-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <div class="card">-->
-<!--                    <div class="card-body">-->
-<!--                        <h5 class="card-title">Card title</h5>-->
-<!--                        <p class="card-text">-->
-<!--                            This is a longer card with supporting text-->
-<!--                            below as a natural lead-in to additional-->
-<!--                            content.-->
-<!--                        </p>-->
-<!--                        <button-->
-<!--                                type="button"-->
-<!--                                class="btn btn-outline-light"-->
-<!--                        >-->
-<!--                            Info-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <div class="card">-->
-<!--                    <div class="card-body">-->
-<!--                        <h5 class="card-title">Card title</h5>-->
-<!--                        <p class="card-text">-->
-<!--                            This is a longer card with supporting text-->
-<!--                            below as a natural lead-in to additional-->
-<!--                            content. This content is a little bit-->
-<!--                            longer.-->
-<!--                        </p>-->
-<!--                        <button-->
-<!--                                type="button"-->
-<!--                                class="btn btn-outline-light"-->
-<!--                        >-->
-<!--                            Info-->
-<!--                        </button>-->
-<!--                    </div>-->
+
                 </div>
             </div>
         </div>
