--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">
-                        Modal title
+                        Login
                     </h5>
                     <button
                             type="button"
