--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     </head>
     <body>
+
     <div class="modal" tabindex="-1" id="modalDialogDelete">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -303,6 +304,7 @@
         </div>
     </div>
 </div>
+    <div class = 'container-md container-edit'></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.6.6/dragula.min.js"></script>
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
