--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="col-md">
             <div class="form-floating">
                 <input
-                        class="form-control"
+                        class="form-control textSearch"
                         id="floatingInputGrid"
                         placeholder="Search by title or body text"
                 />
