--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
 
     </head>
     <body>
+    <div class="modal" tabindex="-1" id="ModalEdit">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body modal-edit-body">
+                </div>
+                <div class="modal-footer modal-edit-footer">
+                    <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">CLOSE</button>
+<!--                    <button type="button" class="btn btn-outline-light dialog-delete"  data-bs-dismiss="modal">I`m sure, DELETE</button>-->
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="modal" tabindex="-1" id="modalDialogDelete">
         <div class="modal-dialog">
@@ -31,6 +47,8 @@
                 <div class="modal-body modal-dialog-delete-text">
                 </div>
                 <div class="modal-footer modal-dialog-delete-footer">
+<!--                    <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">CLOSE</button>-->
+<!--                    <button type="button" class="btn btn-outline-light dialog-delete"  data-bs-dismiss="modal">I`m sure, DELETE</button>-->
                 </div>
             </div>
         </div>
