--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h5 class="modal-title">Edit</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form class="modal-body modal-edit-body"  >
+                <form class="modal-body modal-edit-body needs-validation" novalidate  >
                 </form>
                 <div class="modal-footer modal-edit-footer">
                     <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">CLOSE</button>
